@@ -47,8 +47,6 @@ public class CplexHandler {
 	private IloOplErrorHandler errorHandler;
 
 	public void init() {
-		IloOplFactory.setDebugMode(false);
-
 		ByteArrayOutputStream errors = new ByteArrayOutputStream();
 		env = new IloEnv();
 		factory = new IloOplFactory();
@@ -56,15 +54,15 @@ public class CplexHandler {
 		IloOplFactory.setDebugMode(false);
 	}
 
-	public String solve(String content) {
+	public String solve(String raw) {
 		Date date = new Date();
 		File temp;		
 		Boolean solve = false;
 
 		try {
 			temp = File.createTempFile(String.valueOf(date.getTime()), ".opl");
-			BufferedWriter bw = new BufferedWriter(new FileWriter(temp));
-			content = URLDecoder.decode(content, "UTF-8");
+			BufferedWriter bw = new BufferedWriter(new FileWriter(temp));			
+			String content = URLDecoder.decode(raw, "UTF-8");			
 			bw.write(content);
 			bw.close();
 
@@ -101,6 +99,8 @@ public class CplexHandler {
 				cplex.clearModel();
 				opl.endAll();
 			}
+			
+			env.end();
 		} catch (IloException e) {
 			String[] aux = e.getMessage().split(":");
 			String exc = aux[0];
@@ -109,7 +109,6 @@ public class CplexHandler {
 			} else {
 				solve = null;
 				LOG.log(Level.SEVERE, e.getMessage());
-				LOG.log(Level.INFO, content);
 			}
 			e.printStackTrace();
 		} catch (Error | Exception e) {
@@ -121,7 +120,7 @@ public class CplexHandler {
 		return new Gson().toJson(solve);
 	}
 
-	public String explain(String content) {
+	public String explain(String raw) {
 		OperationResponse response = new OperationResponse();
 
 		Boolean solve = false;
@@ -135,7 +134,7 @@ public class CplexHandler {
 			temp = File.createTempFile(String.valueOf(date.getTime()), ".opl");
 			BufferedWriter bw = new BufferedWriter(new FileWriter(temp));
 
-			content = URLDecoder.decode(content, "UTF-8");
+			String content = URLDecoder.decode(raw, "UTF-8");
 			bw.write(content);
 			bw.close();
 
@@ -238,6 +237,8 @@ public class CplexHandler {
 				cplex.clearModel();
 				opl.endAll();
 			}
+			
+			env.end();
 		} catch (IloException e) {
 			String[] aux = e.getMessage().split(":");
 			String exc = aux[0];
@@ -247,7 +248,6 @@ public class CplexHandler {
 			} else {
 				solve = null;
 				LOG.log(Level.SEVERE, e.getMessage());
-				LOG.log(Level.INFO, content);
 			}
 		} catch (Error | Exception e) {
 			result = "ERROR";
