@@ -1,3 +1,7 @@
+AML 0.1.6, 2015-05-26
+-----------------------
+- Updated CSPWebReasoner.
+
 AML 0.1.5, 2015-05-21
 -----------------------
 - Added support to "iff" and "exludes" expressions.
